Fix image links.

--- a/hugo/content/404.md
+++ b/hugo/content/404.md
@@ -1,7 +1,8 @@
 ---
-title: '404'
+title: '404: Not Found'
 date: 2024-10-15T11:28:03-07:00
+layout: page
 ---
-Not found - Nothing to see here
+Nothing to see here
 
 Someone messed up... Was it you? Was it me? Regardless, this is all that exists where you were trying to go.
