--- a/hugo/content/404.md
+++ b/hugo/content/404.md
@@ -5,4 +5,4 @@ layout: page
 ---
 Nothing to see here
 
-Someone messed up... Was it you? Was it me? Regardless, this is all that exists where you were trying to go.
+Someone messed up... Was it you? Was it me? Regardless, this where you've ended up.
